--- a/src/App.css
+++ b/src/App.css
@@ -14,9 +14,11 @@
   display: flex;
   justify-content: center;
   margin: 20px 0;
+  list-style: none;
 }
 
-.btn button {
+.btn button,
+.btn li>a {
   border-style: none;
   padding: 5px 10px;
   margin-right: 10px;
@@ -24,4 +26,11 @@
   background: #30a7d7;
   color: #fff;
   font-size: 1em;
+  text-decoration: none;
+}
+
+.btn select {
+  font-size: 1em;
+  margin-right: 10px;
+
 }
