--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -12,7 +12,12 @@ p {
     flex-wrap: wrap;
     /* text-align: center; */
     justify-content: center;
+}
 
+.nologo {
+    margin-top: 20px;
+    height: 100px;
+    width: 100px;
 }
 
 .Card__types {
