--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
   width: 70%;
   display: grid;
   margin: 0 auto;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   grid-gap: 10px;
 }
 
@@ -30,7 +30,7 @@
 }
 
 .btn li {
-  margin-top: 15px;
+  margin: 4px 0 4px 0;
 }
 
 .btn select {
@@ -41,5 +41,8 @@
 .pagination {
   display: flex;
   flex-wrap: wrap;
-
+  width: 70%;
+  justify-content: center;
+  align-items: center;
+  margin: 5px auto;
 }
