--- a/src/App.css
+++ b/src/App.css
@@ -35,8 +35,7 @@
 .btn button:hover,
 .btn li>a:hover {
   color: orange;
-  background-color: black;
-  border: 1px solid orange;
+  background-color: grey;
 }
 
 .btn li {
