--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -17,7 +17,6 @@
     align-items: center;
 }
 
-
 .pokemon__logo-img {
     margin: 0 10px;
     width: 100px;
@@ -27,6 +26,7 @@
 .navbar__menu {
     display: flex;
     flex-direction: column;
+    align-items: flex-end;
 }
 
 .search__container {
@@ -78,4 +78,119 @@
     font-size: 1.4rem;
     color: black;
     transition: 0.3s;
+}
+
+/* RWD mediaQueries */
+
+@media only screen and (max-width: 435px) and (min-width: 300px) {
+    .Navbar {
+        flex-direction: column;
+        font-size: 1.4rem;
+        padding: .6% 2%;
+    }
+
+    .pokemon__logo-img {
+        margin: 0 20px;
+        width: 80px;
+        height: 80px;
+    }
+
+    .search__form {
+        font-size: 1.2rem;
+    }
+
+    .form__btn,
+    .search__form-input {
+        font-size: .8rem;
+    }
+
+
+}
+
+@media only screen and (max-width: 640px) and (min-width: 434px) {
+    .Navbar {
+        flex-direction: column;
+        font-size: 1.8rem;
+        padding: .6% 2%;
+    }
+
+    /* .form__btn,
+    .search__form-input {
+        font-size: 0.8rem;
+    } */
+}
+
+@media only screen and (max-width: 768px) and (min-width: 640px) {
+    .Navbar {
+        padding: .6% 3%;
+        font-size: 1.6rem
+    }
+
+    .search__form,
+    .iconSearch {
+        font-size: 1.4rem;
+    }
+
+    .form__btn,
+    .search__form-input {
+        font-size: 1.2rem;
+    }
+}
+
+@media only screen and (max-width: 820px) and (min-width: 641px) {
+    .Navbar {
+        flex-direction: column;
+        font-size: 2rem;
+        padding: .6% 3%;
+        align-items: unset;
+        flex-basis: 100%;
+    }
+
+    .navbar__menu {
+        flex-direction: row;
+        justify-content: space-around;
+    }
+
+    .iconSearch {
+        display: none;
+    }
+
+    .search__form-input {
+        margin-left: 10px;
+    }
+}
+
+
+@media only screen and (max-width: 890px) and (min-width: 821px) {
+    .Navbar {
+        font-size: 1.6rem;
+    }
+
+}
+
+
+@media only screen and (max-width: 1060px) and (min-width: 811px) {
+    .Navbar {
+        padding: .6% 5%;
+    }
+}
+
+@media only screen and (max-width: 1120px) and (min-width:1061px) {
+    .Navbar {
+        font-size: 1.7rem;
+    }
+}
+
+
+@media only screen and (max-width: 1240px) and (min-width:1062px) {
+
+    .search__form,
+    .iconSearch {
+        font-size: 1.2rem;
+    }
+
+    .form__btn,
+    .search__form-input {
+        font-size: 1rem;
+    }
 }
